# python-research-starter

./: .gitignore  .pylintrc  LICENSE  README.md  apply_configuration.py  pyproject.toml
.github/workflows/: ci.yml
assets/configs/: test_env_config.yaml
assets/urdf/franka6/: panda.urdf
assets/urdf/franka_description/: franka_panda_no_gripper.urdf
assets/urdf/human_arm/: arm.urdf  arm_6dof.urdf  arm_continuous.urdf  lower.stl
assets/urdf/wheelchair/: wheelchair.urdf
experiments/: run_single_experiment.py
experiments/conf/: config.yaml
experiments/conf/approach/: random.yaml  search.yaml
experiments/conf/benchmark/: maze_large.yaml  maze_small.yaml
playground/: config_parsing.py  lr_pybullet_testing.py  np_subclassing.py
src/limb_repo/: structs.py  utils.py
src/limb_repo/approaches/: base_approach.py  lr_system.py
src/limb_repo/benchmarks/: base_benchmark.py  maze_benchmark.py
src/limb_repo/controllers/: base_controller.py
src/limb_repo/environments/: __init__.py  base_env.py  base_environment.py  lr_pybullet_env.py  pybullet_env.py  pybullet_environment.py
src/limb_repo/utils/: pybullet_utils.py  utils.py
src/python_research_starter/: bugs.py  structs.py  utils.py
src/python_research_starter/approaches/: base_approach.py  random_approach.py  search_approach.py
src/python_research_starter/benchmarks/: base_benchmark.py  maze_benchmark.py
tests/approaches/: test_random_approach.py  test_search_approach.py
tests/benchmarks/: test_maze_benchmark.py
tests/environment/: test_lr_pybullet_env.py
tests/filler/: test_filler.py
